--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# OS
+Thumbs.db
+
+# environment variables
+.env
+.env.local
+
+# dependencies
+node_modules/
